--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.75.1
+
+MYAPP_RELEASE_STORE_FILE=mykeys.keystore
+MYAPP_RELEASE_KEY_ALIAS=mykeyalias
+MYAPP_RELEASE_STORE_PASSWORD=beyondliberty1402
+MYAPP_RELEASE_KEY_PASSWORD=beyondliberty1402
